--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       </div>
       <address class="address">
         <div class="address__item_two">
-          <a class="address__item" href="tel:+95555555">+9 999 555 5555</a>
+          <a class="address__item" href="#tel:+95555555">+9 999 555 5555</a>
           <img class="line-four" src="./images/Line4.svg" alt="линия">
         </div>
         <div class="address__item_three">
-          <a class="address__item" href="info:info@sobaka.ge">info@sobaka.ge</a>
+          <a class="address__item" href="#info:info@sobaka.ge">info@sobaka.ge</a>
           <img class="line-five" src="./images/Line5.svg" alt="линия">
         </div>
         <a class="address__item" href="#0">наб. Принсенграхт 263-265, Амстердам</a>
