готова вторая проектная работа

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="nav">
         <a class="nav__item" href="#cover">главная</a>
         <img class="list_marker" src="./images/list_marker.svg" alt="пункт">
-        <div class="nav__item_two">
+        <div class="nav__item_one">
           <a class="nav__item" href="#lots">посмотреть лоты</a>
           <img class="line-two" src="./images/Line2.svg" alt="линия">
         </div>
@@ -34,11 +34,11 @@
       </div>
       <address class="address">
         <div class="address__item_two">
-          <a class="address__item" href="#tel:+95555555">+9 999 555 5555</a>
+          <a class="address__item" href="tel:+95555555">+9 999 555 5555</a>
           <img class="line-four" src="./images/Line4.svg" alt="линия">
         </div>
         <div class="address__item_three">
-          <a class="address__item" href="#info:info@sobaka.ge">info@sobaka.ge</a>
+          <a class="address__item" href="info:info@sobaka.ge">info@sobaka.ge</a>
           <img class="line-five" src="./images/Line5.svg" alt="линия">
         </div>
         <a class="address__item" href="#0">наб. Принсенграхт 263-265, Амстердам</a>
@@ -79,7 +79,7 @@
         <div class="lots__card-list">
           <div class="card">
             <div class="card_type_film">
-              <div class="overlay">
+              <div class="overlay-card">
                 <h4 class="card__text">
                   <a class="title-link" href="#0"
                     >Фильм режиссёра, который бросил киношколу</a
@@ -95,7 +95,7 @@
           </div>
           <div class="card">
             <div class="card_type_book">
-              <div class="overlay">
+              <div class="overlay-card">
                 <h4 class="card__text_book">
                   <a class="title-link" href="#0"
                     >Книга, где описан один скучный день из жизни рекламного
@@ -115,7 +115,7 @@
           </div>
           <div class="card">
             <div class="card_type_picture">
-              <div class="overlay">
+              <div class="overlay-card">
                 <h4 class="card__text_picture">
                   <a class="title-link" href="#0"
                     >Картина, которую повторит даже 5-летний сын маминой
@@ -135,7 +135,7 @@
         <div class="lots__look-more">
           <div class="lots-block">
             <a class="look-more" href="#0">посмотреть больше</a>
-            <img class="line-six" src="./images/Line6.svg" alt="линия подчеркивание">
+            <img class="line-six" src="./images/Line6.svg" alt="линия">
           </div>
         </div>
       </section>
@@ -181,12 +181,12 @@
         <a href="#0" class="address__item">наб. Принсенграхт 263-265, Амстердам</a>
       </address>
       <nav class="footer-nav">
-        <a href="#cover" class="nav__item">главная</a>
-        <div class="nav__item_two">
+        <a href="#cover" class="footer-nav_item">главная</a>
+        <div class="footer-nav__item_two">
           <a href="#lots" class="nav__item">посмотреть лоты</a>
           <img class="line-two" src="./images/Line2.svg" alt="линия">
         </div>
-        <div class="nav__item_two">
+        <div class="footer-nav__item_three">
           <a href="#about" class="nav__item">об аукционе</a>
           <img class="line-three" src="./images/Line3.svg" alt="линия">
         </div>
