вторая проектная работа

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <img class="line-four" src="./images/Line4.svg" alt="линия">
         </div>
         <div class="address__item_three">
-          <a class="address__item" href="info:info@sobaka.ge">info@sobaka.ge</a>
+          <a class="address__item" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           <img class="line-five" src="./images/Line5.svg" alt="линия">
         </div>
         <a class="address__item" href="#0">наб. Принсенграхт 263-265, Амстердам</a>
@@ -175,7 +175,7 @@
           <img class="line-four" src="./images/Line4.svg" alt="линия">
         </div>
         <div class="address__item_three">
-          <a class="address__item" href="info:info@sobaka.ge">info@sobaka.ge</a>
+          <a class="address__item" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           <img class="line-five" src="./images/Line5.svg" alt="линия">
         </div>
         <a href="#0" class="address__item">наб. Принсенграхт 263-265, Амстердам</a>
