--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         ></a>
       </div>
       <address class="header-address">
-        <div class="address__container">
+        <div class="header-address__container">
           <a class="address__item_line" href="tel:+99995555555"
             >+9 999 555 5555</a
           >
@@ -178,7 +178,7 @@
     </main>
     <footer class="footer">
       <address class="footer-address">
-        <div class="address__container">
+        <div class="footer-address__container">
           <a class="address__item_line" href="tel:+99995555555"
             >+9 999 555 5555</a
           >
