вторая проектная работа

--- a/index.html
+++ b/index.html
@@ -80,12 +80,9 @@
               <img
                 class="overlay-card"
                 src="./images/overlaycard.svg"
-                alt="прозрачный фон"
-              >
+                alt="прозрачный фон">
               <div class="card__text">
-                <h3 class="title-link">
-                  Фильм режиссёра, который бросил киношколу
-                </h3>
+                <h3 class="title-link">Фильм режиссёра, который бросил киношколу</h3>
                 <p class="text-description">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -102,9 +99,7 @@
                 alt="прозрачный фон"
               >
               <div class="card__text_book">
-                <h3 class="title-link">
-                  Книга, где описан один скучный день из жизни рекламного агента
-                </h3>
+                <h3 class="title-link">Книга, где описан один скучный день из жизни рекламного агента</h3>
                 <p class="text-description">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -124,9 +119,7 @@
                 alt="прозрачный фон"
               >
               <div class="card__text_picture">
-                <h3 class="title-link">
-                  Картина, которую повторит даже 5-летний сын маминой подруги
-                </h3>
+                <h3 class="title-link">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
                 <p class="text-description">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
