--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 class="overlay-card"
                 src="./images/overlaycard.svg"
                 alt="прозрачный фон">
-              <div class="card__text">
+              <div class="card__text_film">
                 <h3 class="title-link">Фильм режиссёра, который бросил киношколу</h3>
                 <p class="text-description">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
